<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@color/app_bg">

    <TextView
        android:id="@+id/headline"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:textAlignment="viewStart"
        android:textColor="@android:color/black"
        android:text="@string/is_this_your_school_location"/>

    <TextView
        android:id="@+id/message"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/headline"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textAlignment="viewStart"
        android:textSize="20sp"
        android:text="@string/location_confirmation_message" />

    <TextView
        android:id="@+id/yes_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="24sp"
        android:layout_below="@id/message"
        android:layout_marginTop="30dp"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/yes"/>

    <TextView
        android:id="@+id/no_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/message"
        android:layout_marginTop="30dp"
        android:layout_toStartOf="@+id/yes_btn"
        android:paddingBottom="16dp"
        android:textSize="24sp"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/no"/>


</RelativeLayout>