<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:gravity="center"
    android:padding="@dimen/loginViewsMargin"
    tools:context=".AddTeacherActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAlignment="center"
        android:textSize="@dimen/headerTextSize"
        android:textColor="@color/primaryTextColor"
        android:text="@string/add_new_teacher"
        android:layout_marginTop="@dimen/loginViewsMargin"/>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/full_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/newsMoreTextSize"
            android:backgroundTint="@android:color/white"
            android:inputType="textPersonName"
            android:maxLines="1"
            android:hint="@string/name_hint"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/newsMoreTextSize"
            android:backgroundTint="@android:color/white"
            android:inputType="phone"
            android:maxLines="1"
            android:hint="@string/hint_mobile_number"/>
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/newsMoreTextSize"
            android:backgroundTint="@android:color/white"
            android:inputType="textEmailAddress"
            android:maxLines="1"
            android:hint="@string/hint_email" />
    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/signup_text_margin_top">
        <EditText
            android:id="@+id/password"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textSize="@dimen/newsMoreTextSize"
            android:backgroundTint="@android:color/white"
            android:hint="@string/hint_password"
            android:maxLines="1"
            android:inputType="textPassword"/>
    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/save_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:background="@drawable/login_button_bg"
        android:textColor="@color/whiteTextColor"
        android:textStyle="bold"
        android:layout_marginTop="16dp"
        android:layout_gravity="center_horizontal"
        android:text="@string/save" />


</LinearLayout>