<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".managerfragments.ReportProblemFragment">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:padding="@dimen/loginViewsMargin">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textStyle="bold"
            android:textAlignment="center"
            android:textSize="@dimen/headerTextSize"
            android:textColor="@color/primaryTextColor"
            android:text="@string/send_report"
            android:layout_marginTop="@dimen/loginViewsMargin"/>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/title"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/newsMoreTextSize"
                android:backgroundTint="@android:color/white"
                android:inputType="text"
                android:maxLines="1"
                android:hint="@string/title"/>
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/loginViewsMargin">
            <EditText
                android:id="@+id/details"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="@dimen/newsMoreTextSize"
                android:backgroundTint="@android:color/white"
                android:gravity="top"
                android:hint="@string/hint_report"
                android:lines="10"
                android:maxLines="20"
                android:inputType="textMultiLine"/>
        </com.google.android.material.textfield.TextInputLayout>


        <Button
            android:id="@+id/send_report_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/login_button_bg"
            android:textColor="@color/whiteTextColor"
            android:textStyle="bold"
            android:text="@string/send"
            android:textAllCaps="false"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="@dimen/loginViewsMargin"/>


    </LinearLayout>

</RelativeLayout>