<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:textSize="20sp"
        android:textColor="@android:color/black"
        android:text="@string/enter_manager_key"/>

    <EditText
        android:id="@+id/key"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:textSize="20sp"
        android:layout_below="@id/title"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="30dp"
        />

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.1dp"
        android:alpha="0.7"
        android:layout_below="@id/key"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        android:background="@android:color/black"/>

    <TextView
        android:id="@+id/save"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="18sp"
        android:textStyle="bold"
        android:layout_below="@id/divider"
        android:layout_alignParentEnd="true"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="16dp"
        android:paddingBottom="16dp"
        android:textColor="@android:color/holo_blue_dark"
        android:text="@string/save"/>
    <TextView
        android:id="@+id/cancel"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_toStartOf="@+id/save"
        android:paddingBottom="16dp"
        android:layout_below="@id/divider"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textColor="@android:color/holo_blue_light"
        android:text="@string/cancel"/>



</RelativeLayout>