<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_bg"
    tools:context=".managerfragments.MyAccountFragment">

    <ImageView
        android:id="@+id/logo"
        android:layout_width="150dp"
        android:layout_height="150dp"
        android:src="@drawable/logo"
        android:layout_marginTop="30dp"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="30dp"/>

    <Button
        android:id="@+id/edit_btn"
        android:layout_width="150dp"
        android:layout_height="wrap_content"
        android:padding="8dp"
        android:layout_marginStart="16dp"
        android:background="@drawable/login_button_bg"
        android:layout_below="@id/logo"
        android:textColor="@android:color/white"
        android:text="@string/edit"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"/>
    <Button
        android:id="@+id/update_location_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_toEndOf="@id/edit_btn"
        android:layout_alignParentEnd="true"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:padding="8dp"
        android:background="@drawable/login_button_bg"
        android:layout_below="@id/logo"
        android:textColor="@android:color/white"
        android:text="@string/update_location"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"/>

    <RelativeLayout
        android:id="@+id/name_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/edit_btn"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/profile_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_my_account"/>
        <TextView
            android:id="@+id/name"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/profile_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Natural Pharmacy"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/name"
            android:layout_toEndOf="@id/profile_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_name"/>


    </RelativeLayout>

    <RelativeLayout
        android:id="@+id/phone_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/name_layout"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/phone_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_phone"/>
        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="(650)555-1234"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_toEndOf="@id/phone_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_mobile"/>


    </RelativeLayout>

    <View
        android:id="@+id/divider"
        android:layout_width="match_parent"
        android:layout_height="0.3dp"
        android:layout_below="@id/phone_layout"
        android:background="@android:color/black"
        android:layout_marginBottom="20dp"
        android:layout_marginStart="70dp"
        android:layout_marginEnd="30dp"/>


    <RelativeLayout
        android:id="@+id/email_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/divider"
        android:layout_marginStart="30dp"
        android:layout_marginBottom="20dp">

        <ImageView
            android:id="@+id/email_icon"
            android:layout_width="32dp"
            android:layout_height="32dp"
            android:layout_marginStart="8dp"
            android:layout_marginEnd="16dp"
            android:layout_centerVertical="true"
            android:src="@drawable/ic_email"/>
        <TextView
            android:id="@+id/email"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="@style/TextAppearance.AppCompat.Body1"
            android:textStyle="bold"
            android:textSize="18sp"
            android:layout_toEndOf="@id/email_icon"
            android:layout_marginStart="8dp"
            android:layout_marginTop="8dp"
            android:text="Al-Ahsa@gmail.com"/>
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/email"
            android:layout_toEndOf="@id/email_icon"
            android:layout_marginStart="8dp"
            android:layout_marginBottom="8dp"
            android:text="@string/profile_personal"/>


    </RelativeLayout>

    <Button
        android:id="@+id/logout_btn"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:background="@drawable/login_button_bg"
        android:layout_below="@id/email_layout"
        android:textColor="@android:color/white"
        android:text="@string/logout"
        android:textAllCaps="false"
        android:layout_marginBottom="16dp"/>


</RelativeLayout>